Invoices are a subset of CMS documents Invoices are stored in CMS file store Contents are related to invoices Removing of invoice removes its content too Invoice can be downloaded only if it has pdf rendition Enabled true async processing of renditions